--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"react-dom": "^16.13.1",
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.2.0",
+		"react-scripts": "^5.0.0",
 		"redux": "^4.0.5",
 		"redux-thunk": "^2.3.0",
 		"resolve": "1.15.0",
